--- a/app/views/categories/_products_grid.html.erb
+++ b/app/views/categories/_products_grid.html.erb
@@ -71,7 +71,7 @@
 
 
 
-<div class="recommended_items"><!--recommended_items-->
+<!-- <div class="recommended_items"> recommended_items
   <h2 class="title text-center">recommended items</h2>
   
   <div id="recommended-item-carousel" class="carousel slide" data-ride="carousel">
@@ -166,4 +166,4 @@
       <i class="fa fa-angle-right"></i>
       </a>      
   </div>
-</div><!--/recommended_items-->
+</div> recommended_items-->
