--- a/app/views/categories/show.html.haml
+++ b/app/views/categories/show.html.haml
@@ -1,11 +1,11 @@
-= render_breadcrumbs :builder => ::BootstrapBreadcrumbsBuilder
-%h1= @category.name
+= render_breadcrumbs :builder => ::BootstrapBreadcrumbsBuilder 
 .row
   - if @category.filters_enabled?
-    .col-md-2
+    .col-md-3
+      = render "layouts/left_sidebar"
       - if @category.brand_filter_enabled?
-        %ul.attributes-list
-          = t('store.brand')
+        %ul.attributes-list.left-sidebar.brands_products
+          %h2= t('store.brand')
           - @category.brands.group_by(&:name).map { |k,v| [v.first, v.length] }.each do |brand_group|
             %li
               %input{type: "checkbox", checked: brand_filter_active?(brand_group[0]), class: 'attribute-filter'}
@@ -28,6 +28,7 @@
                   - else
                     = attribute_filter_link attribute_value_group[0], category_id: @category.id
     .col-md-9
+      %h2= @category.name
       = cache @category.products do
         = render 'products_grid', products: @category.products
   - else
