--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 	    <div class="row">
 	      <div class="col-sm-2">
 	        <div class="companyinfo">
-	          <h2><span>e</span>-shop</h2>
+	          <h2><span>BSK</span></h2>
 	          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,sed do eiusmod tempor</p>
 	        </div>
 	      </div>
@@ -154,5 +154,4 @@
 	    </div>
 	  </div>
 	</div>
-
 </footer><!--/Footer-->
