--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -1,16 +1,19 @@
+
 <div class="left-sidebar">
   <h2>Category</h2>
   <div class="panel-group category-products" id="accordian"><!--category-productsr-->
-    <div class="panel panel-default">
+    <% active_categories.each do |category| %>
+    
+    <div class="panel <%= current_page?(seo_category_path(category, category.seo_name))  && 'panel-primary' %>">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordian" href="#sportswear">
+          <!-- <a data-toggle="collapse" data-parent="#accordian" href="#sportswear"> -->
             <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-            Sportswear
-          </a>
+            <%=link_to category.name, seo_category_path(category, category.seo_name) %>
+          <!-- </a> -->
         </h4>
       </div>
-      <div id="sportswear" class="panel-collapse collapse">
+      <!-- <div id="sportswear" class="panel-collapse collapse">
         <div class="panel-body">
           <ul>
             <li><a href="#">Nike </a></li>
@@ -20,94 +23,12 @@
             <li><a href="#">ASICS </a></li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordian" href="#mens">
-            <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-            Mens
-          </a>
-        </h4>
-      </div>
-      <div id="mens" class="panel-collapse collapse">
-        <div class="panel-body">
-          <ul>
-            <li><a href="#">Fendi</a></li>
-            <li><a href="#">Guess</a></li>
-            <li><a href="#">Valentino</a></li>
-            <li><a href="#">Dior</a></li>
-            <li><a href="#">Versace</a></li>
-            <li><a href="#">Armani</a></li>
-            <li><a href="#">Prada</a></li>
-            <li><a href="#">Dolce and Gabbana</a></li>
-            <li><a href="#">Chanel</a></li>
-            <li><a href="#">Gucci</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordian" href="#womens">
-            <span class="badge pull-right"><i class="fa fa-plus"></i></span>
-            Womens
-          </a>
-        </h4>
-      </div>
-      <div id="womens" class="panel-collapse collapse">
-        <div class="panel-body">
-          <ul>
-            <li><a href="#">Fendi</a></li>
-            <li><a href="#">Guess</a></li>
-            <li><a href="#">Valentino</a></li>
-            <li><a href="#">Dior</a></li>
-            <li><a href="#">Versace</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Kids</a></h4>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Fashion</a></h4>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Households</a></h4>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Interiors</a></h4>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Clothing</a></h4>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Bags</a></h4>
-      </div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title"><a href="#">Shoes</a></h4>
-      </div>
-    </div>
+    <%end%>
   </div><!--/category-products-->
 
-  <div class="brands_products"><!--brands_products-->
+  <!--<div class="brands_products"><!--brands_products
     <h2>Brands</h2>
     <div class="brands-name">
       <ul class="nav nav-pills nav-stacked">
@@ -120,18 +41,18 @@
         <li><a href="#"> <span class="pull-right">(4)</span>Rösch creative culture</a></li>
       </ul>
     </div>
-  </div><!--/brands_products-->
+  </div> brands_products-->
   
-  <div class="price-range"><!--price-range-->
+ <!-- <div class="price-range">price-range
     <h2>Price Range</h2>
     <div class="well text-center">
        <input type="text" class="span2" value="" data-slider-min="0" data-slider-max="600" data-slider-step="5" data-slider-value="[250,450]" id="sl2" ><br />
        <b class="pull-left">$ 0</b> <b class="pull-right">$ 600</b>
     </div>
-  </div><!--/price-range-->
+  </div> price-range-->
   
-  <div class="shipping text-center"><!--shipping-->
+  <!--<div class="shipping text-center">shipping
     <img src="images/home/shipping.jpg" alt="" />
-  </div><!--/shipping-->
+  </div> shipping-->
 
 </div>
